fix: 🐛 ranking card box-shadow too dark

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -109,7 +109,7 @@
     @include ranking-card-shadow(rgba(#B94D2E, .2));
   }
   &2 {
-    @include ranking-card-shadow(rgba(#EBC8A2, .7));
+    @include ranking-card-shadow(rgba(#EBC8A2, .5));
   }
   &3 {
     @include ranking-card-shadow(rgba(#AD8D57, .3));
